syntax = "proto3";

package firewall;

import "google/protobuf/empty.proto";

service FirewallService {
    rpc GetStatus (google.protobuf.Empty) returns (FirewallStatus);
    rpc ListRules (google.protobuf.Empty) returns (RuleListResponse); // Nouvelle RPC
}

message FirewallStatus {
    string status = 1; // "UP" ou "DOWN"
}

// Message pour une seule règle
message RuleInfo {
    int32 id = 1;
    string source_ip = 2;
    string dest_ip = 3;
    string source_port = 4; // Utiliser string pour pouvoir mettre "*"
    string dest_port = 5;   // Utiliser string pour pouvoir mettre "*"
    string action = 6;
    string protocol = 7;
    int32 usage_count = 8;
}

// Message pour la liste des règles
message RuleListResponse {
    repeated RuleInfo rules = 1;
}